Wed Oct  8 08:37:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/CSD_Framework/CSD_ORBInitializer.cpp:
        * tao/RTCORBA/RT_ORBInitializer.cpp:
          ACE_TCHAR fixes

Tue Oct  7 16:03:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_2377_Regression/uipmc_test.cpp
        * orbsvcs/tests/Bug_2615_Regression/client.cpp
        * orbsvcs/tests/Bug_2709_Regression/client.cpp
        * orbsvcs/tests/Bug_2709_Regression/Client_Task.cpp
        * orbsvcs/tests/Bug_2709_Regression/Client_Task.h
        * orbsvcs/tests/Bug_2925_Regression/server.cpp
          ACE_TCHAR fixes

Tue Oct  7 15:20:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_2247_Regression/server.cpp
        * orbsvcs/tests/Bug_2248_Regression/client.h
        * orbsvcs/tests/Bug_2248_Regression/server.cpp
        * orbsvcs/tests/Bug_2285_Regression/server2.cpp
          ACE_TCHAR fixes

Tue Oct  7 15:09:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/AVStreams/Pluggable_Flow_Protocol/TimeStamp.cpp
        * orbsvcs/tests/AVStreams/Simple_Two_Stage/sender.cpp
          ACE_TCHAR fixes

Tue Oct  7 14:50:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/Connection_Manager.cpp
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/distributer.cpp
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/distributer.h
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/receiver.cpp
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/receiver.h
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/sender.cpp
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/sender.h
        * orbsvcs/tests/AVStreams/Component_Switching/distributer.cpp
        * orbsvcs/tests/AVStreams/Component_Switching/distributer.h
        * orbsvcs/tests/AVStreams/Component_Switching/sender.h
          ACE_TCHAR fixes
